--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="estilo.css">
     <script src="https://kit.fontawesome.com/304c41c7f8.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
@@ -44,7 +44,7 @@
     <script>
         new window.VLibras.Widget('https://vlibras.gov.br/app');
     </script>
-    <script src="js/noturno.js"></script>
+    <script src="noturno.js"></script>
     <footer>
 
     </footer>
