--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p class="line typing-animation"><i class="texto">Tenho Grandes Habilidades em: <br> Html5, css3, Redes de Computadores, <br>Python3,  Manipulação de Imagem Via<br> Photoshop, Php7 e SqlServer.</i></p>
         <a href="https://www.webwhatsapp" class="btn">Orçamento</i></a>
     </div>
-    <img src="imagens/perfil.png" class="perfil">
+    <img src="perfil.png" class="perfil">
     <div vw class="enabled">
     <div vw-access-button class="active"></div>
     <div vw-plugin-wrapper>
