--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css">
     <script src="https://kit.fontawesome.com/304c41c7f8.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Portfolio</title>
 </head>
 <body id="body">
     <nav class="nav__menu" id="nav__menu"></nav>
