--- a/index.html
+++ b/index.html
@@ -29,11 +29,14 @@
     </nav>
     <div class="introduction"></div>
         <h1 class="line typing-animation">&nbsp Ola, Me Chamo Pedro,</h1>
-        <p class="line typing-animation">conhecido como RaposaDev,</p>
-        <p class="line typing-animation"><i class="texto">Tenho Grandes Habilidades em: <br> Html5, css3, Redes de Computadores, <br>Python3,  Manipulação de Imagem Via<br> Photoshop, Php7 e SqlServer.</i></p>
+        <p class="line typing2-animation">&nbspConhecido como RaposaDeveloper,</p>
+        <p class="line typing3-animation">Algumas das minhas habilidades são:</p>
+        <p class="line typing4-animation">Html5, Css3, Redes de Computadores,</p> 
+        <p class="line typing5-animation">Python3,  Manipulação de Imagem Via</p>
+        <p class="line typing6-animation">Photoshop, Php7 e SqlServer.</p>
         <a href="https://www.webwhatsapp" class="btn">Orçamento</i></a>
     </div>
-    <img src="perfil.png" class="perfil">
+    <img src="imagens/perfil.png" class="perfil">
     <div vw class="enabled">
     <div vw-access-button class="active"></div>
     <div vw-plugin-wrapper>
@@ -46,7 +49,11 @@
     </script>
     <script src="noturno.js"></script>
     <footer>
-
+        <i class="fab fa-github"></i>
+        <i class="fab fa-linkedin"></i>
+        <i class="fab fa-facebook"></i>
+        <i class="fab fa-twitter"></i>
     </footer>
+    
 </body>
 </html>
