--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p class="line typing6-animation">Photoshop, Php7 e SqlServer.</p>
         <a href="https://www.webwhatsapp" class="btn">Orçamento</i></a>
     </div>
-    <img src="imagens/perfil.png" class="perfil">
+    <img src="perfil.png" class="perfil">
     <div vw class="enabled">
     <div vw-access-button class="active"></div>
     <div vw-plugin-wrapper>
